# libwpd

./: CMakeLists.txt  Makefile  README.md  build.bat  dllmain.cpp  libwpd.h  libwpd.vcxproj  test.c
.github/workflows/: ci.yml
src/: api2.c  dll.cpp  main.cpp  main.h  parse.c  ptp.h  test.c
vs/: libwpd.sln
windows/: PortableDeviceApi.h  PortableDeviceApi.hpp  PortableDeviceTypes.hpp  wpd_fills.h
